--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
-org.gradle.jvmargs=-Xmx2048M
+org.gradle.jvmargs=-Xmx4096M
 
 minecraft_version=1.19.2
 enabled_platforms=fabric,forge
 
-archives_base_name=examplemod
-mod_version=1.0.0
-maven_group=net.examplemod
+archives_base_name=stone_age
+mod_version=dev_1.0
+maven_group=com.atom596
 
 architectury_version=6.2.43
 
