Fixed the Forge Error
I had to change the version number to 0.0.1, this only took me a month to figure out...

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -14,8 +14,8 @@ loom {
         convertAccessWideners = true
         extraAccessWideners.add loom.accessWidenerPath.get().asFile.name
 
-        mixinConfig "examplemod-common.mixins.json"
-        mixinConfig "examplemod.mixins.json"
+        mixinConfig "stone_age-common.mixins.json"
+        mixinConfig "stone_age.mixins.json"
     }
 }
 
