--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ minecraft_version=1.19.2
 enabled_platforms=fabric,forge
 
 archives_base_name=stone_age
-mod_version=dev_1.0
+mod_version=0.0.1
 maven_group=com.atom596
 
 architectury_version=6.2.43
